fixes SonarLint & Codacy reported issues